--- a/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
+++ b/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
@@ -1,22 +1,54 @@
 @import '../../index-variables';
 
 .c-MainSearchToggle--group {
-    label {
+    .c-MainSearchToggle--button {
         background-color: #fff;
         padding: 0.8rem 0;
         width: 6.5rem;
         height: 4.7rem;
+        color: black;
+        border-color: #ddd !important;
+        border-bottom-color: transparent !important;
+        opacity: 1;
+        &.focus,
+        &.active,
+        &.active:hover,
+        &:focus {
+            background-color: #646cbd !important;
+            opacity: 1;
+            box-shadow: inset 0 0 2.5rem #4d59ca !important;
+        }
+        &:not(.active) {
+            &:first-child {
+                border-left: 0.15rem solid #ccc !important;
+            }
+        }
         svg {
             font-size: 2.2rem;
             color: #000;
             position: relative;
             top: 0.35rem;
         }
+        &.active svg {
+            color: #fff;
+        }
+        input:focus {
+            box-shadow: none !important;
+            outline: none !important;
+            border-radius: 0;
+            border-width: 0 0.15rem;
+        }
+        .icon {
+            color: #333;
+            font-size: 2.85rem;
+            position: relative;
+            bottom: 0.5rem;
+        }
+        &.active .icon {
+            color: #fff;
+        }
         &.active {
             background-color: #4d59ca;
-            svg {
-                color: #fff;
-            }
             &::before {
                 width: 0;
                 height: 0;
@@ -32,48 +64,6 @@
                 margin-left: -0.6rem;
                 background-color: transparent;
             }
-        }
-    }
-    label,
-    label input:focus {
-        box-shadow: none !important;
-        outline: none !important;
-        border-radius: 0;
-        border-width: 0 0.15rem;
-    }
-
-    .c-MainSearchToggle--button {
-        color: black;
-        border-color: #ddd !important;
-        border-bottom-color: transparent !important;
-        opacity: 1;
-        &:hover {
-            color: #000 !important;
-            background-color: #e9f4ff !important;
-        }
-        &.focus,
-        &.active,
-        &.active:hover,
-        &:focus {
-            background-color: #646cbd !important;
-            opacity: 1;
-            box-shadow: inset 0 0 2.5rem #4d59ca !important;
-        }
-        &:not(.active) {
-            &:first-child {
-                border-left: 0.15rem solid #ccc !important;
-            }
-            &:nth-child(n + 2) {
-            }
-        }
-        .icon {
-            color: #333;
-            font-size: 3rem;
-            position: relative;
-            bottom: 0.5rem;
-        }
-        &.active .icon {
-            color: #fff;
         }
     }
 }
