--- a/kmaps-app/src/Om.css
+++ b/kmaps-app/src/Om.css
@@ -663,7 +663,7 @@
 }
 
 .sui-advEdit {
-    display: none;
+    /* display: none;
     background-color: #fafafa;
     text-align: left;
     border: 0.1rem solid #ddd;
@@ -673,7 +673,7 @@
     font-size: 1.25rem;
     color: #000;
     margin: 1.7rem 0;
-    box-shadow: inset 0.25rem 0.25rem 1rem 0.2rem #eee;
+    box-shadow: inset 0.25rem 0.25rem 1rem 0.2rem #eee; */
 }
 
 .sui-advEdit-facet-ctrls-btns {
