--- a/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
+++ b/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
@@ -154,7 +154,7 @@
 }
 
 .u-related__list__header {
-    padding: 1rem 0 0.25rem 0.5rem;
+    padding: 0 0 0.25rem 0.5rem;
     margin: 0 1rem;
     font-size: 1.45rem;
     font-weight: bold;
